# arch-example

./: .gitignore  .pylintrc  README.md  conftest.py  local.env.sample  manage-django.py  pydantic_data.py  pyproject.toml  test.env.sample
legacy/: settings.py  urls.py  wsgi.py
legacy/something/: entrypoints.py  models.py
legacy/something/migrations/: 0001_initial.py
migrations/: logging.ini
migrations/timemgmt/: env.py
migrations/timemgmt/versions/: aaa2c7f45cfe_init.py
tempus/: __init__.py  apps.py  main.py  migrations.py
tempus/common/: event_bus.py  interfaces.py  message_bus.py  persistence.py  sqla_json.py  testing_tools.py  the_app.py
tempus/lib/: legacy_app.py  message_bus.py  sqla.py  the_app.py  user.py
tempus/lib/persistence/: __init__.py  base.py  prototyping.py  sqla.py
tempus/lib/utils/: wrapper.py
tempus/prototype_example/: __init__.py  commands.py  domain.py  infra.py  queries.py  service_layer.py
tempus/prototype_example/entry_points/: http.py
tempus/timemgmt/: __init__.py  commands.py  domain.py  external_events.py  infra.py  interfaces.py  persistence.py  queries.py  service_layer.py  settings.py
tempus/timemgmt/entry_points/: http.py
tempus/timemgmt/persistence/: __init__.py  orm.py  uow.py
tests/common/: test_message_bus.py  test_sqla_json.py
tests/common/persistence/: test_base.py
tests/lib/: test_message_bus.py  test_sqla_json.py
tests/lib/persistence/: test_base.py  test_prototyping.py
tests/timemgmt/: fixtures.py
tests/timemgmt/domain/: factories.py  test_project.py
(+8 files in other folders)
