[tool.poetry]
name = "arch-example"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.62.0"
sqlalchemy = "^1.3.20"
psycopg2-binary = "^2.8.6"
python-dotenv = "^0.15.0"
parse = "^1.18.0"
django = "~=2.0"
a2wsgi = "^1.3.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-watch = "^4.2.0"
mypy = "^0.790"
python-language-server = "^0.36.1"
black = "^20.8b1"
uvicorn = {extras = ["watchgodreload"], version = "^0.13.1"}
requests = "^2.25.0"
ipython = "^7.19.0"
pylint = "^2.6.0"
coverage = "^5.3"
pytest-cov = "^2.10.1"
alembic = "^1.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
